# Thinking-with-Types

./: README.md  Thinking-with-Types.cabal  hie.yaml  thinking-with-types.cabal
app/: AdHocSingletons.hs  Algebra.hs  Commander.hs  Constraints.hs  Database.hs  Defunc.hs  DeriveAnyClass.hs  Exercises.hs  ExistentialTypes.hs  FCTF.hs  GADTs.hs  HKD.hs  ImpredicativeTypes.hs  InspectionTesting.hs  JSONSchema.hs  Kan.hs  Kinds.hs  Misc.hs  NoImpredicativeTypes.hs  OpenProduct.hs  OpenSum.hs  PosNeg.hs  Printf.hs  PrintfTypes.hs  QuantifiedConstraints.hs  RankN.hs  Roles.hs  ST.hs  Sigma.hs  Singletons.hs  SingletonsTH.hs  TicTacToe.hs  TypeApps.hs
app/Generic/: HKDNames.hs  Monoid.hs  Omit.hs
app/War/: Age.hs  Ecstasy.hs  Polysemy.hs  Refinery.hs
misc/: Database.hs  InspectionTesting.hs  Sigma.hs
misc/Generic/: HKDNames.hs  Monoid.hs  Omit.hs
misc/HKD/: HKD.hs
misc/ImpredicativeTypes/: ImpredicativeTypes.hs
misc/Singletons/: Singletons.hs
misc/SingletonsTH/: SingletonsTH.hs
misc/War/: Ecstasy.hs
src/AdHocSingletons/: AdHocSingletons.hs
src/Algebra/: Algebra.hs
src/Commander/: Commander.hs
src/Constraints/: Constraints.hs
src/Defunc/: Defunc.hs
src/DeriveAnyClass/: DeriveAnyClass.hs
src/Exercises/: Exercises.hs
src/ExistentialTypes/: ExistentialTypes.hs
src/FCTF/: FCTF.hs
src/GADTs/: GADTs.hs
src/JSONSchema/: JSONSchema.hs
src/Kan/: Kan.hs
src/Kinds/: Kinds.hs
src/Misc/: Misc.hs
src/NoImpredicativeTypes/: NoImpredicativeTypes.hs
src/OpenSum/: OpenSum.hs
src/PrintfTypes/: PrintfTypes.hs
src/RankN/: RankN.hs
src/Roles/: Roles.hs
src/TicTacToe/: TicTacToe.hs
