cabal-version: 2.4
name:          thinking-with-types
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:
        AdHocSingletons
        Algebra
        Commander
        Constraints
        Defunc
        DeriveAnyClass
        Exercises
        FCTF
        GADTs
        Generic.Monoid
        Generic.Omit
        Generic.HKDNames
        HKD
        ImpredicativeTypes
        InspectionTesting
        JSONSchema
        Kan
        Kinds
        Misc
        NoImpredicativeTypes
        OpenProduct
        OpenSum
        PosNeg
        Printf
        PrintfTypes
        QuantifiedConstraints
        RankN
        Roles
        ST
        Singletons
        TicTacToe
        TypeApps
        War.Age
        War.Ecstasy
        War.Polysemy
        War.Refinery

    hs-source-dirs:     app
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        aeson -any,
        aeson-pretty -any,
        base -any,
        bytestring -any,
        constraints -any,
        containers -any,
        first-class-families -any,
        ghc-prim -any,
        inspection-testing -any,
        kan-extensions -any,
        kind-generics -any,
        kind-generics-th -any,
        lens -any,
        mtl -any,
        singletons -any,
        singletons-base -any,
        singletons-th -any,
        text -any,
        transformers -any,
        vector -any,
        witherable -any
